@@ -1,0 +1,13 @@
+citHeader("To cite ggmap in publications, please use:")
+
+citEntry(entry = "article",
+  author = "David Kahle and Hadley Wickham",
+  title = "ggmap: Spatial Visualization with ggplot2",
+  journal = "The R Journal",
+  year = "2013",
+  volume = "5",
+  number = "1",
+  pages = "144--161",
+  url = "http://journal.r-project.org/archive/2013-1/kahle-wickham.pdf",
+  textVersion = "D. Kahle and H. Wickham. ggmap: Spatial Visualization with ggplot2. The R Journal, 5(1), 144-161. URL http://journal.r-project.org/archive/2013-1/kahle-wickham.pdf"
+)
